# rust_tm4c123gh6pm

./: Cargo.toml  Makefile  README.md  memory.x  openocd.gdb  software.sh
.cargo/: config.toml
.github/workflows/: rust.yml
src/: baremetal.rs  main.rs
